--- a/source/_posts/2019-02-28-tiktok.md
+++ b/source/_posts/2019-02-28-tiktok.md
@@ -1,5 +1,5 @@
 ---
- 
+ categories: 互联网
  title: 技术之恶——抖音
  date: 2019-02-28
  tags: 互联网
@@ -23,7 +23,7 @@
 
 在对抖音的这件事情上，抖音本身便是这个有问题的社会结构。它像一个独立的社会，有着一些独特的形式和章程。这些形式决定了它吸引什么样的人，这些人会做出什么样的行为，产生什么样的内容。
 
-短视频是抖音最大的特点，当然现在也有了很多同类产品。分开来讲，视频这种内容形式注定了它更偏向于娱乐性的，非严肃的内容。短意味着发布者需要在极端的时间内抓住用户，产生兴趣。十几秒的时间，BGM的选择，画面的色调，动作场景。综合来看，会在用户越来越多的时间推动发布者产生更加猎奇，擦边球，充满性诱惑的内容。视频数量越多，用户的阈值越高，视频的内容也会越来越偏离“正常”。
+短视频是抖音最大的特点，当然现在也有了很多同类产品。分开来讲，视频这种内容形式注定了它更偏向于娱乐性的，非严肃的内容。短意味着发布者需要在极端的时间内抓住用户，产生兴趣。十几秒的时间，BGM 的选择，画面的色调，动作场景。综合来看，会在用户越来越多的时间推动发布者产生更加猎奇，擦边球，充满性诱惑的内容。视频数量越多，用户的阈值越高，视频的内容也会越来越偏离“正常”。
 
 另一个由头条发扬光大并且延续到抖音的设计便是下拉刷新。推崇“延迟满足感”的聪明人张一鸣，在面对普通人的时候，还是选择了赚他们钱。推荐系统和下拉刷新的设计，迎合了用户容易沉溺于当下的满足感的心理弱点。往往在不知不觉间，几个小时就过去了，也没有多少人知道自己在这几个小时里看了什么。
 
@@ -37,8 +37,8 @@
 
 附最新的两个新闻:
 
-* [2019年2月28日 抖音与美国FTC和解儿童数据收集指控](https://cn.wsj.com/articles/%E6%8A%96%E9%9F%B3%E4%B8%8E%E7%BE%8E%E5%9B%BDftc%E5%92%8C%E8%A7%A3%E5%84%BF%E7%AB%A5%E6%95%B0%E6%8D%AE%E6%94%B6%E9%9B%86%E6%8C%87%E6%8E%A7-11551312310)
-* [2019年02月28日 报告：抖音海外版下载量突破10亿大关 挑战Facebook](https://tech.sina.com.cn/i/2019-02-28/doc-ihsxncvf8476428.shtml)
+* [2019 年 2 月 28 日 抖音与美国 FTC 和解儿童数据收集指控](https://cn.wsj.com/articles/%E6%8A%96%E9%9F%B3%E4%B8%8E%E7%BE%8E%E5%9B%BDftc%E5%92%8C%E8%A7%A3%E5%84%BF%E7%AB%A5%E6%95%B0%E6%8D%AE%E6%94%B6%E9%9B%86%E6%8C%87%E6%8E%A7-11551312310)
+* [2019 年 02 月 28 日 报告：抖音海外版下载量突破 10 亿大关 挑战 Facebook](https://tech.sina.com.cn/i/2019-02-28/doc-ihsxncvf8476428.shtml)
 
 
 
