--- a/source/_posts/2019-03-21-jandan.md
+++ b/source/_posts/2019-03-21-jandan.md
@@ -1,6 +1,5 @@
 ---
-
-
+categories: 互联网
 title: 煎蛋网
 date: 2019-03-21 23:20:25 +0800
 tags: 互联网
@@ -10,13 +9,13 @@ comments: true
 
 互联网已经诞生了三十年了。
 
-从hackernews的反馈来看，对于现状的不满相当之多。科技公司更容易成为世界上最庞大的公司之一，未来也更是如此。我们有了更加高效，庞大的网络系统，更加便捷的生活服务，代价是：更多的信息收集，无法匿名，更少的自由选择。
+从 hackernews 的反馈来看，对于现状的不满相当之多。科技公司更容易成为世界上最庞大的公司之一，未来也更是如此。我们有了更加高效，庞大的网络系统，更加便捷的生活服务，代价是：更多的信息收集，无法匿名，更少的自由选择。
 
 科幻电影在刻画未来生活时，大部分的场景设定都是很偷懒的。很少有人能去设定出一个自洽的未来时代。但有一点却是很有可能的，未来的公司（Enterprise)很有可能在很多方面取代现在的政府，或者对其造成极大的威胁。
 
-墙内的环境特殊，这样的问题愈加严重。到今天，你会发现每一个app都要求用手机号注册，而每一个手机号又必须实名认证。对网站来讲，要么是跟app一样的策略，要么是流量太小，无人问津。也有越来越多的网站/app对于未注册者限制内容浏览。
+墙内的环境特殊，这样的问题愈加严重。到今天，你会发现每一个 app 都要求用手机号注册，而每一个手机号又必须实名认证。对网站来讲，要么是跟 app 一样的策略，要么是流量太小，无人问津。也有越来越多的网站/app 对于未注册者限制内容浏览。
 
-但曾经我们的互联网，并不是这样的。不用登陆/注册你也可以看到一社区的大部分内容，登陆注册也只需要邮箱，而邮箱又是可以随意注册的。自由以极小的撒谎的代价换来了大多数的隐私，而现在则是我们可以很容易地定位曝光一个惹“众怒”的网友，代价则是我们每一个人都再也无所遁从了。你说了一句话，很块就在打开一些app的时候看到相关的推荐，你听一首歌，app会给你展示相似风格的。那个并不智能的最大的`monitor`，很多时候比我们自己更能理解我们。
+但曾经我们的互联网，并不是这样的。不用登陆/注册你也可以看到一社区的大部分内容，登陆注册也只需要邮箱，而邮箱又是可以随意注册的。自由以极小的撒谎的代价换来了大多数的隐私，而现在则是我们可以很容易地定位曝光一个惹“众怒”的网友，代价则是我们每一个人都再也无所遁从了。你说了一句话，很块就在打开一些 app 的时候看到相关的推荐，你听一首歌，app 会给你展示相似风格的。那个并不智能的最大的`monitor`，很多时候比我们自己更能理解我们。
 
 在刷煎蛋的时候，我经常会刷到自己不喜欢的内容。经常有人会发大量的让人产生审美疲劳的猫图，或者是存在了太久的老段子，而作为网站女神的检察长的图确很少见~。这是一件不怎么痛快的事。然而，在我用了一段时间的知乎推荐之后，我才发现，后者才是最令人痛苦的。在你吃了一个好吃的酱肉包之后，这个“智能推荐系统”只会不断地望你嘴里塞馒头，以及各式各样不同馅的包子，大多还是半生不熟的。而在煎蛋，伴随着很多让人觉得无趣的内容之外，是非常多让人耳目一新的东西，是你单靠自己和“智能推荐系统”都无法发现的内容。
 
