--- a/source/_posts/2019-03-25-istio.md
+++ b/source/_posts/2019-03-25-istio.md
@@ -1,5 +1,5 @@
 ---
-
+categories: 技术
 title: istio
 date: 2019-03-25 19:16:44 +0800
 tags:  [技术随笔]
@@ -58,7 +58,7 @@ docker 的作用是：
 
 ## Istio
 
-微服务相比于单体服务的一切问题都应该在这层解决, trace, 限流, metrics等等
+微服务相比于单体服务的一切问题都应该在这层解决, trace, 限流, metrics 等等
 
 1. 不需要修改业务代码
 2. 比手工的实现更完善，功能更强
