--- a/source/_posts/2019-03-29-wangyin.md
+++ b/source/_posts/2019-03-29-wangyin.md
@@ -5,7 +5,7 @@ date: 2019-03-29 13:23:49 +0800
 tags: 人物
 excerpt: 偏执的魅力
 comments: true
-
+categories: 人物
 ---
 
 大学换了笔记本后，不知道什么原因当时装的 win7 老是自己蓝屏。于是，我做了一个愉快的决定，完全换到 linux。促成这一切的，是退学了的王垠写了的一篇文章《完全用 Linux 工作》。
