--- a/source/_posts/2019-05-06-debugger.md
+++ b/source/_posts/2019-05-06-debugger.md
@@ -2,7 +2,7 @@
 title: 少有人用的 debugger
 toc: true
 date: 2019-05-06 11:32:22
-summary: 因为一直来它就是一个 bad tool
+excerpt: 因为一直来它就是一个 bad tool
 tags: [架构]
 ---
 
