--- a/source/_posts/2019-08-31-hadoop.md
+++ b/source/_posts/2019-08-31-hadoop.md
@@ -3,11 +3,9 @@ title: 失败博物馆 - Hadoop
 toc: true
 categories: 技术
 date: 2019-08-31 13:35:37
-excerpt:
-tags: [架构,设计，大数据]
+excerpt: [WIP]大象倒了吗
+tags: [架构,设计,大数据]
 ---
-
-<!-- toc -->
 
 Hadoop 严格来说并不算完全失败了，不像 Mesos 那样，而是人们期待它成为一个大象， 而它却变成了一只兔子。
 
