--- a/source/_posts/2019-08-31-hadoop.md
+++ b/source/_posts/2019-08-31-hadoop.md
@@ -3,7 +3,7 @@ title: 失败博物馆 - Hadoop
 toc: true
 categories: 技术
 date: 2019-08-31 13:35:37
-excerpt: [WIP]大象倒了吗
+excerpt: 大象倒了吗
 tags: [架构,设计,大数据]
 ---
 
