--- a/source/_posts/2019-04-20-jffs3.md
+++ b/source/_posts/2019-04-20-jffs3.md
@@ -24,7 +24,7 @@ comments: true
 
 <!-- tocstop -->
 
-看完了[闪存](https://yanhang.me/flash/),继续看文件系统。网上搜了一圈，发现都是讲 Andriod 的目录结构的，讲文件系统本身的少。目前能确认的是历史上曾经用过 ext4,yaffs,yaffs2 等。
+看完了[闪存](https://yanhang.me/posts/flash/),继续看文件系统。网上搜了一圈，发现都是讲 Andriod 的目录结构的，讲文件系统本身的少。目前能确认的是历史上曾经用过 ext4,yaffs,yaffs2 等。
 估计目前主流的应该是 ext4。不过在搜索的时候先发现了一篇讲 jffs3 的，它在嵌入式系统上应用比较广泛，也是针对 Flash 存储特定设计的文件系统。不太确定现在的使用范围，但是拿出来研究下还是不错的。
 
 ## 闪存对文件系统的影响
