--- a/source/_posts/2020-09-10-uos.md
+++ b/source/_posts/2020-09-10-uos.md
@@ -26,18 +26,27 @@ tags: [Linux, 产品]
 假设硬件的问题解决了，那么更难的来了: 软件。国内因为更加封闭的互联网生态这个问题更加严重。让用户苹果/Wechat 二选一，大部分人会放弃苹果，Linux 也类似，没有微信这些软件，没有正常用户会喜欢用 Linux。问题摆在这，那么国产操作系统怎么做的答案也就呼之欲出了:
 
 * 一定要有一个内置了常见应用的应用商店，后期还要支持付费购买软件。
+* 系统内置基本的常用应用
 * 用户装上能适配所有的基本硬件: 显示器，网络，蓝牙，甚至打印机等等
 * 界面好看
 
 看起来就这么简单，做起来非常难，至少看起来麒麟一个也没做成。统信至少这几个方面都尝试了
 
 * 跟大量国内软件厂商去适配软件。像微信这种腾讯自己不做的，用社区现有的开源方案(Windows兼容层)做好放到商店里。
-* 跟大量硬件厂商去一个一个适配，也做了打印机方面的适配
-* Deepin 本来界面就挺不错，基于它继续优化
+* 比较可圈可点的就是做了一个内置的类似 MAC 的 图库 应用(应该是 Linux 平台第一个)
+* 跟大量硬件厂商去一个一个适配，也做了打印机方面的适配。当然基于国产化的考虑也适配了国内基本上所有的芯片（龙芯等）
+* Deepin 本来界面就挺不错，基于它继续优化即可。
 
-做到现在，当然问题还有，BUG 也不少，稳定性也有不少问题。但可以肯定的讲，统信走的路线非常对的，取得的成就也是国产操作系统里最大的一个了(用户桌面领域)。虽然说操作系统领域是最不可能被卡脖子的领域之一，但能取得这样的成绩，还是非常值得肯定的。
+做到现在，当然问题还有，BUG 也不少，稳定性也有不少问题。但可以肯定的讲，统信走的路线非常对的，取得的成就也是国产操作系统里最大的一个了(用户桌面领域)。虽然说操作系统领域是最不可能被卡脖子的领域之一，但能取得这样的成绩，还是非常值得肯定的。对我个人来讲，完全愿意将其作为自己主要的日常使用环境了。
+
+最后，还说说说不好的地方；
+
+1. 做了一个垃圾的内置浏览器。这东西完全不用自己做，直接基于 chromium/firefox 自己定制就行
+2. Deepin 的一些老问题，N卡和外接显示器不兼容，这个没解决好。网络链接不稳定也是。
+3. App Store 用起来稳定性比较差
 
 
+希望继续努力吧。
 
 
 
